--- a/index.html
+++ b/index.html
@@ -93,5 +93,284 @@
         </div>
       </div>
     </section>
+
+    <section class="section-meals">
+      <ul class="meals-showcase clearfix">
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/1.jpg"
+              alt="Korean bibimbap with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/2.jpg"
+              alt="Simple italian pizza with cherry tomatoes"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/3.jpg"
+              alt="Chicken breast steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="assets/img/4.jpg" alt="Autumn pumpkin soup" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-showcase clearfix">
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/5.jpg"
+              alt="Paleo beef steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/6.jpg"
+              alt="Healthy baguette with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="assets/img/7.jpg" alt="Burger with cheddar and bacon" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img
+              src="assets/img/8.jpg"
+              alt="Granola with cherries and strawberries"
+            />
+          </figure>
+        </li>
+      </ul>
+    </section>
+    <!-- How To Work -->
+    <section class="section-steps">
+      <div class="row"><h2>How it works - Simple as 1, 2, 3</h2></div>
+      <div class="row">
+        <div class="col span-1-of-2 steps-box">
+          <img
+            src="assets/img/app-iPhone.png"
+            alt="app-iPhone"
+            class="app-screen"
+          />
+        </div>
+        <div class="col span-1-of-2 steps-box">
+          <div class="work-steps">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today
+            </p>
+          </div>
+          <div class="work-steps">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
+          </div>
+          <div class="work-steps">
+            <div>3</div>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
+          </div>
+          <a class="btn-app" href="#"
+            ><img src="assets/img/app-store-icon.png" alt="app-store-icon"
+          /></a>
+          <a class="btn-app" href="#"
+            ><img
+              src="assets/img/download-app-android.png"
+              alt="download-app-android"
+          /></a>
+        </div>
+      </div>
+    </section>
+    <!-- Section 4: Cities -->
+    <section class="section-cities">
+      <div class="row"><h2>We're currently in these cities</h2></div>
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <img src="assets/img/lisbon-3.jpg" alt="lisbon-3" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <i class="fas fa-star icon-small"></i> 1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="fas fa-user icon-small"></i> 60+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="fab fa-twitter icon-small"></i>
+            <a href="#">@omnifood_lx</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="assets/img/san-francisco.jpg" alt="san-francisco" />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <i class="fas fa-star icon-small"></i> 3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="fas fa-user icon-small"></i>160+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="fab fa-twitter icon-small"></i>
+            <a href="#">@omnifood_sf</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="assets/img/berlin.jpg" alt="berlin" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <i class="fas fa-star icon-small"></i> 2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="fas fa-user icon-small"></i> 110+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="fab fa-twitter icon-small"></i
+            ><a href="#">@omnifood_berlin</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="assets/img/london.jpg" alt="london" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <i class="fas fa-star icon-small"></i> 1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <i class="fas fa-user icon-small"></i> 50+ top chefs
+          </div>
+          <div class="city-feature">
+            <i class="fab fa-twitter icon-small"></i
+            ><a href="#">@omnifood_london</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonial Section -->
+    <section class="section-testimonial">
+      <div class="row"><h2>Our customers can't live without us</h2></div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <blockquote>
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+          </blockquote>
+          <cite
+            ><img src="assets/img/customer-1.jpg" alt="customer-1" />(Alberto
+            Duncan)
+          </cite>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            healthy and great-tasting meals, delivered right to my home. We have
+            lots of food delivery here in Lisbon, but no one comes even close to
+            Omifood. Me and my family are so in love!
+          </blockquote>
+          <cite
+            ><img src="assets/img/customer-2.jpg" alt="customer-1" />(Joana
+            Silva)
+          </cite>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+          </blockquote>
+          <cite
+            ><img src="assets/img/customer-3.jpg" alt="customer-1" />(Milton
+            Chapman)
+          </cite>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION PLANS -->
+    <section class="section-plans">
+      <div class="row"><h2>Start eating healthy today</h2></div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Premium</h3>
+              <p class="plan-price">399$ <span>/ month</span></p>
+              <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+            </div>
+            <div>
+              <ul>
+                <li><i class="fa fa-check icon-small"></i>1 meal every day</li>
+                <li><i class="fa fa-check icon-small"></i>Order 24/7</li>
+                <li>
+                  <i class="fa fa-check icon-small"></i>Access to newest
+                  creations
+                </li>
+                <li><i class="fa fa-check icon-small"></i>Free delivery</li>
+              </ul>
+            </div>
+            <div><a class="btn btn-full" href="#">Sign Up Now</a></div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Pro</h3>
+              <p class="plan-price">149$ <span>/ month</span></p>
+              <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+            </div>
+            <div>
+              <ul>
+                <li>
+                  <i class="fa fa-check icon-small"></i>1 meal 10 days/month
+                </li>
+                <li><i class="fa fa-check icon-small"></i>Order 24/7</li>
+                <li>
+                  <i class="fa fa-check icon-small"></i>Access to newest
+                  creations
+                </li>
+                <li><i class="fa fa-check icon-small"></i>Free delivery</li>
+              </ul>
+            </div>
+            <div><a class="btn btn-ghost" href="#">Sign Up Now</a></div>
+          </div>
+        </div>
+        <div class="col span-1-of-3">
+          <div class="plan-box">
+            <div>
+              <h3>Starter</h3>
+              <p class="plan-price">19$ <span>/ meal</span></p>
+              <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+            </div>
+            <div>
+              <ul>
+                <li><i class="fa fa-check icon-small"></i>19$ per meal</li>
+                <li><i class="fa fa-check icon-small"></i>1 meal</li>
+                <li>
+                  <i class="fa fa-check icon-small"></i>Order from 8 am to 12 pm
+                </li>
+                <li><i class="fa fa-check icon-small"></i>Free delivery</li>
+              </ul>
+            </div>
+            <div><a class="btn btn-ghost" href="#">Sign Up Now</a></div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
