completed footer section

--- a/index.html
+++ b/index.html
@@ -372,5 +372,119 @@
         </div>
       </div>
     </section>
+    <!-- SECTION CONTACT FORM -->
+    <section class="section-contact">
+      <div class="row"><h2>We're happy to hear from you</h2></div>
+      <div class="row">
+        <form action="#" method="POST" id="form">
+          <div class="row">
+            <div class="col span-1-of-3"><label for="name">Name</label></div>
+            <div class="col span-2-of-3">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Your Name"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"><label for="email">Email</label></div>
+            <div class="col span-2-of-3">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Your Email"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label>How did you Find Us?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <select name="find-us" id="find-us">
+                <option value="friends" selected>Friends</option>
+                <option value="search-engine">Search Engine</option>
+                <option value="Advertisment">Advertisment</option>
+                <option value="Other">Other</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="newsletter">Newsletter?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input
+                type="checkbox"
+                name="newsletter"
+                id="newsletter"
+                checked
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="textarea">Drop us a line</label>
+            </div>
+            <div class="col span-2-of-3">
+              <textarea
+                name="message"
+                id=""
+                cols="30"
+                rows="10"
+                placeholder="Your Message"
+                required
+              ></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3"></div>
+            <div class="col span-2-of-3">
+              <input type="submit" class="btn-submit" value="Submit" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- FOOTER -->
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li>About Us</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>IOS App</li>
+            <li>Andriod App</li>
+          </ul>
+        </div>
+        <div class="col span-1-of-2">
+          <ul class="icon-links">
+            <li>
+              <a href="#"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-google-plus"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>
+        Copyright 2019 &copy; by OmniFood. All rights Reserved.
+      </p>
+      </div>
+    </footer>
   </body>
 </html>
